{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 31,
  "lineage": "2171151f-e4c6-2699-e3b1-f3a774934910",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-059925481de1a5272",
            "arn": "arn:aws:ec2:us-east-1:915473859991:instance/i-034cc5ef4bd40f26a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034cc5ef4bd40f26a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0383424670d49e5e6"
              }
            ],
            "primary_network_interface_id": "eni-0383424670d49e5e6",
            "private_dns": "ip-10-0-10-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.56",
            "public_ip": "3.231.222.166",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d10e170d356adde5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de31864e3c026bcb",
            "tags": {
              "Name": "dev-Instance"
            },
            "tags_all": {
              "Name": "dev-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0c07cf29a8fc46f44"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "915473859991",
            "id": "i-034cc5ef4bd40f26a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.ssh_server_key",
            "aws_security_group.myapp_sg",
            "aws_subnet.myapp_subnet_1",
            "aws_vpc.myapp_vpc",
            "data.aws_ami.latest_amazon_linux_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915473859991:internet-gateway/igw-0538fc3a4c2dcf311",
            "id": "igw-0538fc3a4c2dcf311",
            "owner_id": "915473859991",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-IGW"
            },
            "tags_all": {
              "Name": "dev-IGW"
            },
            "vpc_id": "vpc-0173bae5ade6ea5ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915473859991:route-table/rtb-0f1d4417fe2cc6c4e",
            "id": "rtb-0f1d4417fe2cc6c4e",
            "owner_id": "915473859991",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0538fc3a4c2dcf311",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-Route-Table"
            },
            "tags_all": {
              "Name": "dev-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0173bae5ade6ea5ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "915473859991",
            "id": "rtb-0f1d4417fe2cc6c4e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myapp_route_table_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ce94a37eb8f865f",
            "region": "us-east-1",
            "route_table_id": "rtb-0f1d4417fe2cc6c4e",
            "subnet_id": "subnet-0de31864e3c026bcb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_route_table.myapp_route_table",
            "aws_subnet.myapp_subnet_1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915473859991:security-group/sg-0c07cf29a8fc46f44",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c07cf29a8fc46f44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "75.41.2.149/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-SG",
            "name_prefix": "",
            "owner_id": "915473859991",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-SG"
            },
            "tags_all": {
              "Name": "dev-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0173bae5ade6ea5ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "915473859991",
            "id": "sg-0c07cf29a8fc46f44",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915473859991:subnet/subnet-0de31864e3c026bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de31864e3c026bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "915473859991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-Subnet-1"
            },
            "tags_all": {
              "Name": "dev-Subnet-1"
            },
            "vpc_id": "vpc-0173bae5ade6ea5ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "915473859991",
            "id": "subnet-0de31864e3c026bcb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:915473859991:vpc/vpc-0173bae5ade6ea5ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f28ed4d81c5ccae5",
            "default_route_table_id": "rtb-0c7005ec3ef731022",
            "default_security_group_id": "sg-0a048922096c67c1c",
            "dhcp_options_id": "dopt-0f3d269a7cf938956",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0173bae5ade6ea5ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7005ec3ef731022",
            "owner_id": "915473859991",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-VPC"
            },
            "tags_all": {
              "Name": "dev-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "915473859991",
            "id": "vpc-0173bae5ade6ea5ce",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}